--- a/Mainwindow.xaml
+++ b/Mainwindow.xaml
@@ -6,8 +6,10 @@
         xmlns:local="clr-namespace:LegendofGnome"
         mc:Ignorable="d"
         KeyDown="Window_KeyDown"
-        Title="MainWindow" Height="350" Width="525">
-    <Canvas x:Name="canvas">
+        MouseDown="Window_MouseDown"
+        Title="MainWindow" MinHeight="1000" Width="1300" WindowState="Maximized">
+    
+    <Canvas x:Name="Canvas">
         
     </Canvas>
 </Window>
